# osparc-simcore

./: .codeclimate.yml  .codecov.yml  .coveragerc  .dockerignore  .env-devel  .env-wb-db-event-listener  .env-wb-db-to-rabbit-adapter  .env-wb-garbage-collector  .env-webserver-garbage-collector  .env_  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .isort.cfg  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .ruff.toml  .stack-simcore-production.yml  .tmp-compose.yml  .travis.yml  .typos.toml  .wezterm.lua  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NEW_LIB.md  NOTES.md  README.md  SERVICES.md  TODO.md  TODOS.md  (+26 more)
scripts/maintenance/computational-clusters/: Makefile  README.md  osparc_clusters.py  pyproject.toml  requirements.txt  test.txt
scripts/maintenance/computational-clusters/autoscaled_monitor/: analysis.py  cli.py  constants.py  core.py  dask.py  db.py  ec2.py  main.py  models.py  osparc_clusters.py  reconciliation.py  rendering.py  ssh.py  utils.py
scripts/maintenance/computational-clusters/autoscaled_monitor/commands/: summary.py
scripts/release/: Makefile  README.md  pyproject.toml
scripts/release/monitor/: Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
scripts/release/monitor/monitor_release/: cli.py  models.py  portainer.py  portainer_utils.py  settings.py
scripts/release/monitor_release/: cli.py  gitlab.py  models.py  portainer.py  portainer_utils.py  settings.py
services/catalog/: .cookiecutterrc  .env-devel  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose-adjacent.yml  docker-compose-extra.yml  docker-compose.yml  openapi.json  pyproject.toml  setup.cfg  setup.py
services/catalog/docker/: boot.sh  entrypoint.sh  healthcheck.py
services/catalog/requirements/: Makefile  _base.in  _base.txt  _packages.in  _packages.txt  _test.in  _test.txt  _tools.in  _tools.txt  ci.txt  constraints.txt  dev.txt  prod.txt
services/catalog/src/simcore_service_catalog/: __init__.py  __main__.py  __version__.py  _constants.py  _meta.py  cli.py  config.py  crud.py  db.py  endpoints.py  endpoints_diagnostics.py  errors.py  main.py  meta.py  orm.py  remote_debug.py  schemas.py  utils.py
services/catalog/src/simcore_service_catalog/api/: rest.py  root.py
services/catalog/src/simcore_service_catalog/clients/: director.py  rabbitmq.py  redis.py
services/catalog/src/simcore_service_catalog/core/: application.py  background_tasks.py  events.py  settings.py  tracing.py
services/catalog/src/simcore_service_catalog/crud/: crud_dags.py  crud_dusers.py
services/catalog/src/simcore_service_catalog/db/: errors.py  events.py  tables.py
services/catalog/src/simcore_service_catalog/endpoints/: dags.py  diagnostics.py  dusers.py  users.py
services/catalog/src/simcore_service_catalog/exceptions/: errors.py
services/catalog/src/simcore_service_catalog/infrastructure/: director.py  postgres.py  rabbitmq.py
services/catalog/src/simcore_service_catalog/models/: __init__.py  catalog_services.py  services_db.py  services_ports.py  services_specifications.py
services/catalog/src/simcore_service_catalog/orm/: orm_dags.py  orm_dusers.py
services/catalog/src/simcore_service_catalog/repositories/: _services_sql.py  services.py
services/catalog/src/simcore_service_catalog/repository/: _services_sql.py  _tables.py  events.py  groups.py  projects.py  services.py  setup.py
services/catalog/src/simcore_service_catalog/schemas/: project.py  schemas_dags.py  schemas_dusers.py
services/catalog/src/simcore_service_catalog/service/: access_rights.py  catalog_services.py  compatibility.py  function_services.py  manifest.py  services.py  services_api.py
services/catalog/src/simcore_service_catalog/services/: access_rights.py  catalog.py  compatibility.py  director.py  frontend_services.py  function_services.py  manifest.py  rabbitmq.py  registry.py  remote_debug.py  services_api.py  services_catalog.py
services/catalog/src/simcore_service_catalog/store/: __init__.py
services/catalog/src/simcore_service_catalog/utils/: helpers.py  pools.py  remote_debug.py  requests_decorators.py  service_resources.py  versioning.py
services/catalog/tests/: conftest.py
services/catalog/tests/fixtures/: docker-compose.yml
services/catalog/tests/integration/: test_none.py  test_registry.py
services/catalog/tests/unit/: conftest.py  fakes.py  test__model_examples.py  test__openapi_specs.py  test_api_rest.py  test_api_rpc.py  test_cli.py  test_clients_director.py  test_core_application.py  test_core_settings.py  test_db_repositories_services_sql.py  test_infrastructure_director.py  test_models.py  test_models_domain_groups.py  test_models_schemas.py  test_models_schemas_services.py  test_openapi_specs.py  test_package.py  test_repository_services_sql.py  test_rest.py  test_schemas.py  test_service_compatibility.py  test_service_director.py  test_service_function_services.py  test_service_manifest.py  test_services_compatibility.py  test_services_director.py  test_services_frontend_services.py  test_services_function_services.py  test_services_manifest.py  test_services_registry.py  test_services_schemas.py  test_utils_service_extras.py  test_utils_service_labels.py  test_utils_service_resources.py  test_utils_versioning.py
services/catalog/tests/unit-with-dbs/: test_rest.py
services/catalog/tests/unit/with_dbs/: conftest.py  docker-compose.yml  test_api_rest_services__get.py  test_api_rest_services__list.py  test_api_rest_services_access_rights.py  test_api_rest_services_ports.py  test_api_rest_services_resources.py  test_api_rest_services_specifications.py  test_api_routes_dags.py  test_api_routes_services.py  test_api_routes_services__inaccessible.py  test_api_routes_services__list.py  test_api_routes_services__shareable.py  test_api_routes_services_access_rights.py  test_api_routes_services_ports.py  test_api_routes_services_resources.py  test_api_routes_services_specifications.py  test_api_rpc.py  test_core_background_task__sync.py  (+16 more)
(+11189 files in other folders)
