[project]
name = "catalog"
version = "0.1.0"
description = "Manages and maintains a catalog of all published components (e.g. macro-algorithms, scripts, etc)"
requires-python = ">=3.13.9"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "diagnostics: can be used to run diagnostics against deployed data",
  "testit: marks test to run during development",
]

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
