[project]
name = "simcore-service-catalog"
version = "0.1.0"
description = "Manages and maintains a catalog of all published components (e.g. macro-algorithms, scripts, etc)"
authors = [
    { name = "sanderegg", email = "35365065+sanderegg@users.noreply.github.com" }
]
requires-python = ">=3.13.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
