[project]
name = "simcore-service-catalog"
version = "0.1.0"
description = "Manages and maintains a catalog of all published components (e.g. macro-algorithms, scripts, etc)"
authors = [
    { name = "sanderegg", email = "35365065+sanderegg@users.noreply.github.com" }
]
requires-python = ">=3.13.9"
dependencies = [
    "arrow>=1.3.0",
    "jsonref>=1.1.0",
    "jsonschema>=4.25.1",
    "orjson>=3.11.4",
    "pydantic[email]>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.7.0",
    "alembic>=1.15.1",
    "sqlalchemy[postgresql-asyncpg,postgresql-psycopg2binary]>=1.4.54",
    "yarl>=1.18.3",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "aio-pika>=9.5.5",
    "aiocache[msgpack,redis]>=0.12.3",
    "aiodebug>=2.3.0",
    "aiodocker>=0.24.0",
    "aiofiles>=24.1.0",
    "faststream>=0.5.35",
    "httpx[http2]>=0.28.1",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-instrumentation-aio-pika>=0.55b1",
    "opentelemetry-instrumentation-asyncpg>=0.55b1",
    "opentelemetry-instrumentation-httpx>=0.55b1",
    "opentelemetry-instrumentation-logging>=0.55b1",
    "opentelemetry-instrumentation-redis>=0.55b1",
    "opentelemetry-instrumentation-requests>=0.55b1",
    "opentelemetry-sdk>=1.34.1",
    "psutil>=7.0.0",
    "pyinstrument>=5.1.1",
    "pyyaml>=6.0.3",
    "redis>=5.2.1",
    "stream-zip>=0.0.84",
    "tenacity>=9.0.0",
    "toolz>=1.0.0",
    "tqdm>=4.67.1",
    "asgi-lifespan>=2.1.0",
    "fastapi[standard]>=0.116.1",
    "fastapi-lifespan-manager>=0.1.4",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "prometheus-client>=0.21.1",
    "asyncpg>=0.30.0",
    "packaging>=24.2",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.15.1",
    "asgi-lifespan>=2.1.0",
    "click>=8.2.1",
    "docker>=7.1.0",
    "faker>=37.8.0",
    "jsonschema>=4.25.1",
    "mypy>=1.18.2",
    "ptvsd>=4.3.2",
    "pytest>=8.4.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-docker>=3.2.3",
    "pytest-mock>=3.15.1",
    "pytest-runner>=6.0.1",
    "respx>=0.22.0",
    "sqlalchemy[mypy]>=1.4.54",
    "types-psycopg2>=2.9.21.20250915",
    "types-pyyaml>=6.0.12.20250915",
]
